upmuplot/packages/s3ui/css/s3ui.css
.outline {
    border: 1px solid black;
    margin: 1px;
}
td.checkboxlabel {
    font-weight: bold;
}
input.datefield {
    width: 200px;
}
input.axisname {
    width: 75px;
}
input.axisrange {
    width: 50px;
}
td.axisrangeselect {
    text-align: right;
}
svg.chart {
    font-size: 16px;
    font-family: serif;
}
.unclickedchart {
    cursor: url(../img/openhand.cur), move;
}
.clickedchart {
    cursor: url(../img/closedhand.cur), move;
}
rect.clickscreen {
    pointer-events: visibleFill;
}
.jstree-contextmenu {
    z-index: 99999; /* So the context menu isn't hidden. */
}
.jstree-node {
    position: relative;
    z-index: 49999; /* So the tree isn't covered by the something accidentally. */
}
.streamTree * {
    background-color: white;
}
div.permalink {
    word-wrap: break-word;
}
.legend td, .axes td, .axisLegend th {
    padding: 2px;
}
tr.axissetting > td {
    padding-top: 1.5em;
}
.streamName {
    cursor: pointer;
}
.metadataDisplay > h3 {
    margin-top: 0px;
}

